--- a/src/app/Income.form
+++ b/src/app/Income.form
@@ -283,7 +283,7 @@
                                       </Group>
                                       <Component id="jScrollPane1" alignment="0" min="-2" pref="564" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jTextField2" min="-2" pref="151" max="-2" attributes="0"/>
+                                          <Component id="searchField" min="-2" pref="151" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="jButton6" min="-2" max="-2" attributes="0"/>
                                       </Group>
@@ -348,7 +348,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jButton6" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jTextField2" alignment="3" max="32767" attributes="0"/>
+                              <Component id="searchField" alignment="3" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jScrollPane1" min="-2" pref="805" max="-2" attributes="0"/>
@@ -568,7 +568,7 @@
                     <Property name="text" type="java.lang.String" value="Rp. 0"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField2">
+                <Component class="javax.swing.JTextField" name="searchField">
                 </Component>
                 <Component class="javax.swing.JButton" name="jButton6">
                   <Properties>
