--- a/src/app/Home.form
+++ b/src/app/Home.form
@@ -219,7 +219,6 @@
                                           <EmptySpace max="32767" attributes="0"/>
                                           <Component id="jButton8" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="jPanel3" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="jScrollPane3" pref="570" max="32767" attributes="0"/>
                                       <Component id="chartJPanel" alignment="0" max="32767" attributes="0"/>
                                       <Group type="102" attributes="0">
@@ -234,6 +233,10 @@
                                               </Group>
                                           </Group>
                                           <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
+                                          <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
